# rabbitmq-async-example

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: project_check.yaml
migrations/: 20251017064315_init_tables.down.sql  20251017064315_init_tables.up.sql  20260108141745_services.down.sql  20260108141745_services.up.sql  20260108141954_users.down.sql  20260108141954_users.up.sql
rmq_macros/: Cargo.toml
rmq_macros/src/: lib.rs
src/: configs.rs  errors.rs  lib.rs  prelude.rs
src/database/: mod.rs
src/database/functions/: mod.rs  schemas.rs
src/database/models/: application_requests.rs  application_responses.rs  fail_table.rs  mod.rs  service_responses.rs  services.rs
src/mapping/: mod.rs  schemas.rs  validators.rs
src/rmq/: builder.rs  handlers.rs  mod.rs  schemas.rs
src/tasks/: mod.rs
src/tasks/consumer/: methods.rs  mod.rs  utils.rs
src/tasks/producer/: methods.rs  mod.rs
