[package]
name = "rabbitmq-async-example"
version = "1.1.0"
edition = "2024"
authors = ["Gregory Saliba", "gregtmj@gmail.com"]
description = "This project is meant to handle multiple consumers for Rabbitmq and act as a system for I/O microservices operations"
readme = "README.md"
repository = "https://github.com/GregTMJ/rabbitmq-async-example"
license-file = "LICENSE"
publish = false

[dependencies]
lapin = { version = "3.7.0", features = ["unstable"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4" , features = ["serde"] }
lazy_static = "1.5"
dotenvy = "0.15.7"
async-trait = "0.1.89"
serde = { version = "1.0.227" }
serde_json = { version = "1.0.145" }
derivative = { version = "2.2.0" }
uuid = { version = "1.18", features = ["v4"] }
validator = { version = "0.19", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "derive", "chrono", "uuid" ] }
log = "0.4"
env_logger = "0.11.8"
thiserror = "2"
envconfig = "0.11"

[[bin]]
path = "src/bin/main.rs"
name = "rabbitmq-async-example"

[profile.dev]
opt-level = 3
codegen-units = 16  # Increase parallel compilation
incremental = true   # Enable incremental compilation
